feat: 선물박스 열어보기 API 구현 (#92)
* rename: GiftBoxResponse를 GiftBoxIdResponse로 변경

* rename: GiftBoxResponse를 GiftBoxIdResponse로 변경

* fix: GiftBox 엔티티에 senderName, receiverName 추가

* fix: Envelope 엔티티에 borderColorCode 추가

* remove: 사용하지 않는 import 제거

* fix: GiftBox 엔티티에 열기 제한을 나타내는 enum 컬럼 추가

* fix: giftBoxType을 지정하지 않아도 PRIVATE으로 저장되도록 변경

* docs: Swagger에 선물박스 만들기 API description 추가

* feat: 선물박스 열어보기 API 구현

* test: 선물박스 열어보기 API Controller 테스트 코드 작성

* docs: ERD envelope 테이블에 borderColorCode 추가

* refactor: 빌더 메서드 모듈화

* fix: 선물박스 열어보기 API PathVariable value 추가

* fix: 선물박스 만들기 로직 리팩토링, 선물박스 열어보기 예외처리 추가, 테스트 코드 작성