@@ -1,7 +1,11 @@
 package com.dilly.gift.api;
 
+import static org.hamcrest.Matchers.hasSize;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.BDDMockito.given;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
@@ -11,10 +15,17 @@ import com.dilly.gift.dto.request.GiftBoxRequest;
 import com.dilly.gift.dto.request.GiftRequest;
 import com.dilly.gift.dto.request.PhotoRequest;
 import com.dilly.gift.dto.request.StickerRequest;
+import com.dilly.gift.dto.response.BoxResponse;
+import com.dilly.gift.dto.response.EnvelopeResponse;
 import com.dilly.gift.dto.response.GiftBoxIdResponse;
+import com.dilly.gift.dto.response.GiftBoxResponse;
+import com.dilly.gift.dto.response.GiftResponse;
+import com.dilly.gift.dto.response.PhotoResponse;
+import com.dilly.gift.dto.response.StickerResponse;
 import com.dilly.global.ControllerTestSupport;
 import com.dilly.global.WithCustomMockUser;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.DynamicTest;
@@ -28,14 +39,9 @@ class GiftControllerTest extends ControllerTestSupport {
     @WithCustomMockUser
     Collection<DynamicTest> createGiftBox() {
         // given
-        List<PhotoRequest> photos = List.of(
-            PhotoRequest.builder()
-                .photoUrl("www.test1.com").description("description1").sequence(1)
-                .build(),
-            PhotoRequest.builder()
-                .photoUrl("www.test2.com").description("description2").sequence(2)
-                .build()
-        );
+        List<PhotoRequest> photos = Collections.singletonList(PhotoRequest.builder()
+            .photoUrl("www.test1.com").description("description1").sequence(1)
+            .build());
         List<StickerRequest> stickers = List.of(
             StickerRequest.builder().id(1L).location(1).build(),
             StickerRequest.builder().id(2L).location(2).build());
@@ -106,6 +112,130 @@ class GiftControllerTest extends ControllerTestSupport {
                     .andExpect(status().isOk())
                     .andExpect(jsonPath("$.data.id").isNumber())
                     .andExpect(jsonPath("$.data.uuid").isString());
+            })
+        );
+    }
+
+    @DisplayName("선물박스 열기 시나리오")
+    @TestFactory
+    @WithCustomMockUser
+    Collection<DynamicTest> openGiftBox() {
+        // given
+        BoxResponse boxResponse = BoxResponse.builder()
+            .boxFull("www.example.com")
+            .boxPart("www.example.com")
+            .boxBottom("www.example.com")
+            .build();
+        EnvelopeResponse envelopeResponse = EnvelopeResponse.builder()
+            .imgUrl("www.example.com")
+            .borderColorCode("000000")
+            .build();
+        List<PhotoResponse> photos = Collections.singletonList(PhotoResponse.builder()
+            .photoUrl("www.example.com")
+            .description("description")
+            .sequence(1)
+            .build());
+        List<StickerResponse> stickers = List.of(
+            StickerResponse.builder().imgUrl("www.example.com").location(1).build(),
+            StickerResponse.builder().imgUrl("www.example.com").location(2).build());
+        GiftResponse giftResponse = GiftResponse.builder()
+            .type("photo")
+            .url("www.naver.com")
+            .build();
+
+        return List.of(
+            DynamicTest.dynamicTest("선물이 있을 경우", () -> {
+                // given
+                GiftBoxResponse giftBoxResponse = GiftBoxResponse.builder()
+                    .name("test")
+                    .senderName("sender")
+                    .receiverName("receiver")
+                    .box(boxResponse)
+                    .envelope(envelopeResponse)
+                    .letterContent("This is letter content.")
+                    .youtubeUrl("www.youtube.com")
+                    .photos(photos)
+                    .stickers(stickers)
+                    .gift(giftResponse)
+                    .build();
+                given(giftService.openGiftBox(anyLong())).willReturn(giftBoxResponse);
+
+                // when // then
+                mockMvc.perform(
+                        get(baseUrl + "/giftbox/{giftBoxId}", anyLong())
+                            .with(csrf())
+                            .contentType(MediaType.APPLICATION_JSON)
+                    )
+                    .andDo(print())
+                    .andExpect(status().isOk())
+                    .andExpect(jsonPath("$.data.name").value(giftBoxResponse.name()))
+                    .andExpect(jsonPath("$.data.senderName").value(giftBoxResponse.senderName()))
+                    .andExpect(
+                        jsonPath("$.data.receiverName").value(giftBoxResponse.receiverName()))
+                    .andExpect(
+                        jsonPath("$.data.box.boxFull").value(giftBoxResponse.box().boxFull()))
+                    .andExpect(
+                        jsonPath("$.data.box.boxPart").value(giftBoxResponse.box().boxPart()))
+                    .andExpect(
+                        jsonPath("$.data.box.boxBottom").value(giftBoxResponse.box().boxBottom()))
+                    .andExpect(jsonPath("$.data.envelope.imgUrl").value(
+                        giftBoxResponse.envelope().imgUrl()))
+                    .andExpect(jsonPath("$.data.envelope.borderColorCode").value(
+                        giftBoxResponse.envelope().borderColorCode()))
+                    .andExpect(
+                        jsonPath("$.data.letterContent").value(giftBoxResponse.letterContent()))
+                    .andExpect(jsonPath("$.data.youtubeUrl").value(giftBoxResponse.youtubeUrl()))
+                    .andExpect(jsonPath("$.data.photos").isArray())
+                    .andExpect(jsonPath("$.data.photos", hasSize(giftBoxResponse.photos().size())))
+                    .andExpect(
+                        jsonPath("$.data.stickers", hasSize(giftBoxResponse.stickers().size())))
+                    .andExpect(jsonPath("$.data.gift.type").value(giftBoxResponse.gift().type()))
+                    .andExpect(jsonPath("$.data.gift.url").value(giftBoxResponse.gift().url()));
+            }),
+            DynamicTest.dynamicTest("선물이 없을 경우", () -> {
+                // given
+                GiftBoxResponse giftBoxResponse = GiftBoxResponse.builder()
+                    .name("test")
+                    .senderName("sender")
+                    .receiverName("receiver")
+                    .box(boxResponse)
+                    .envelope(envelopeResponse)
+                    .letterContent("This is letter content.")
+                    .youtubeUrl("www.youtube.com")
+                    .photos(photos)
+                    .stickers(stickers)
+                    .build();
+                given(giftService.openGiftBox(any())).willReturn(giftBoxResponse);
+
+                // when // then
+                mockMvc.perform(
+                        get(baseUrl + "/giftbox/{giftBoxId}", anyLong())
+                            .with(csrf())
+                            .contentType(MediaType.APPLICATION_JSON)
+                    )
+                    .andDo(print())
+                    .andExpect(status().isOk())
+                    .andExpect(jsonPath("$.data.name").value(giftBoxResponse.name()))
+                    .andExpect(jsonPath("$.data.senderName").value(giftBoxResponse.senderName()))
+                    .andExpect(
+                        jsonPath("$.data.receiverName").value(giftBoxResponse.receiverName()))
+                    .andExpect(
+                        jsonPath("$.data.box.boxFull").value(giftBoxResponse.box().boxFull()))
+                    .andExpect(
+                        jsonPath("$.data.box.boxPart").value(giftBoxResponse.box().boxPart()))
+                    .andExpect(
+                        jsonPath("$.data.box.boxBottom").value(giftBoxResponse.box().boxBottom()))
+                    .andExpect(jsonPath("$.data.envelope.imgUrl").value(
+                        giftBoxResponse.envelope().imgUrl()))
+                    .andExpect(jsonPath("$.data.envelope.borderColorCode").value(
+                        giftBoxResponse.envelope().borderColorCode()))
+                    .andExpect(
+                        jsonPath("$.data.letterContent").value(giftBoxResponse.letterContent()))
+                    .andExpect(jsonPath("$.data.youtubeUrl").value(giftBoxResponse.youtubeUrl()))
+                    .andExpect(jsonPath("$.data.photos").isArray())
+                    .andExpect(jsonPath("$.data.photos", hasSize(giftBoxResponse.photos().size())))
+                    .andExpect(
+                        jsonPath("$.data.stickers", hasSize(giftBoxResponse.stickers().size())));
             })
         );
     }
